<resources>
    <string name="app_name">My Rules</string>
    <string name="action_settings">Settings</string>
    <string name="exit_message">Are you sure you want to exit?</string>

    <!-- Drawer and toolbar -->
    <string name="my_rules">My Rules</string>
    <string name="my_actions">My Actions</string>
    <string name="my_conditions">My Conditions</string>
    <string name="history">History</string>
    <string name="debug">Debug</string>
    <string name="action_edit">Edit Action</string>
    <string name="action_new">New Action</string>
    <string name="select_contacts">Select contacts</string>


    <string-array name="list_of_events">
        <item>Select an Event</item>
        <item>Incoming call</item>
        <item>Incoming SMS</item>
    </string-array>

    <string-array name="list_of_weekdays">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string name="rule_name">Rule name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_name">Action name</string>
    <string name="condition_name">Condition name</string>
    <string name="rules_engine_running">Rules Engine Running</string>

    <string name="lbl_start_rules_engine">Start Rules Engine</string>
    <string name="lbl_stop_rules_engine">Stop Rules Engine</string>
    <string name="lbl_enter_a_name">Enter a name</string>
    <string name="lbl_hint_interv_end">Type the interval end</string>
    <string name="lbl_hint_interv_start">Type the interval start</string>
    <string name="lbl_add_rule_name">Add a name for this rule</string>
    <string name="lbl_event">Event</string>
    <string name="lbl_conditions">Conditions</string>
    <string name="lbl_actions">Actions</string>
    <string name="lbl_no_condition_added">No conditions added</string>
    <string name="lbl_no_action_added">No actions added</string>
    <string name="lbl_hint_number_equal">Type the number</string>
    <string name="lbl_hint_number_multiply">Type the multiplier</string>
    <string name="operator_or">O\nR</string>
    <string name="operator_and">A\nN\nD</string>
    <string name="action_sequence">S\nE\nQ</string>
    <string name="message_rule_name_mandatory">You must give a name for this rule.</string>
    <string name="select_an_action">Select an Action...</string>
    <string name="lbl_complete_selection">Complete selection</string>
    <string name="search_contacts">Search a contact...</string>
    <string name="lbl_search_condition">Search a condition...</string>
    <string name="lbl_search_action">Search an action...</string>
    <string name="select_a_condition">Select a Condition...</string>
    <string name="contact_selected">Selected contacts:</string>
    <string name="condition_selected">Selected conditions:</string>
    <string name="action_selected">Selected actions:</string>
    <string name="message_error_permission_denied">To save you have to grant all of the permissions.</string>

    <!-- Deleting -->
    <string name="really_delete_action">Do you really want to delete this action?</string>
    <string name="really_delete_condition">Do you really want to delete this condition?</string>
    <string name="really_delete_rule">Do you really want to delete this rule?</string>

    <string name="is_outisde_of_iterval">Is outside of interval</string>
    <string name="set_min_time">Set from time</string>
    <string name="set_max_time">Set to time</string>
    <string name="time_interval_info">Time interval</string>

    <string name="msg_err_bad_time_interval">Min time has to be less or equal than max time!</string>

    <string name="msg_err_bad_interval">Min has to be less than max!</string>
    <string name="msg_err_not_an_interval">This is not an interval!</string>

    <!-- Font awesome icons-->
    <string name="lbl_start_rules_engine_icon">{faw-play}</string>
    <string name="lbl_stop_rules_engine_icon">{faw-stop}</string>
    <string name="lbl_edit_item">{faw-pencil}</string>
    <string name="lbl_delete_item">{faw-trash-o}</string>
    <string name="lbl_reorder_items">{faw-bars}</string>


    <!-- Event names -->
    <string name="event_title_number_event">Number Event</string>
    <string name="event_title_incomming_sms_event">Incoming SMS</string>
    <string name="event_title_incomming_call_event">Incoming Call</string>

    <!-- Condition names -->
    <string name="condition_title_always_true_condition">Always True Condition</string>
    <string name="condition_title_always_false_condition">Always False Condition</string>
    <string name="condition_title_is_number_prime_condition">Is Number Prime Condition</string>
    <string name="condition_title_is_number_in_interval_condition">Is Number in Interval Condition</string>
    <string name="condition_title_is_number_equal_condition">Is Number Equal With Condition</string>
    <string name="condition_title_contact_is_in_group_condition">Contact is in Group Condition</string>
    <string name="condition_title_is_time_in_interval_condition">Is Time in Interval Condition</string>
    <string name="condition_title_day_is_in_list_condition">Day is in List Condition</string>

    <!-- Action names -->
    <string name="action_title_toast_incoming_event_action">Toast the Incoming Event</string>
    <string name="action_title_multiply_action">Multiply With a Number</string>
    <string name="action_title_fibonacci_action">Calculate Fibonacci Number</string>
    <string name="action_title_send_sms_action">Send SMS to Contacts</string>
    <string name="action_title_forward_sms_action">Forward SMS to Contacts</string>
    <string name="action_title_reject_call_action">Reject Call</string>
    <string name="error_mandatory_field">This field is mandatory!</string>
    <string name="lbl_send_to_contact_from_event">Send to contact from the event</string>
    <string name="lbl_send_to_group">Send to Group</string>
    <string name="select_event">Select an Event</string>
    <string name="hint_deafult_sms_message">Type a default message</string>
    <string name="default_sms_message">I will call you back soon.</string>
    <string name="lbl_name">Name</string>
</resources>
