<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/rule_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_add_rule_name"/>

            <TextView
                style="@style/Header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_event"/>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                fab:ms_hint="@string/select_event"/>

            <TextView
                style="@style/Header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_conditions"/>

            <FrameLayout
                android:id="@+id/condition_card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.software.shell.fab.ActionButton
                android:id="@+id/fab_add_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/floating_action_button_negative_margin"
                android:layout_marginBottom="@dimen/floating_action_button_negative_margin"
                fab:button_color="@color/colorAccent"
                fab:image="@drawable/fab_plus_icon"
                fab:show_animation="@anim/fab_roll_from_down"
                fab:type="DEFAULT"/>


            <TextView
                style="@style/Header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_actions"/>

            <FrameLayout
                android:id="@+id/actions_card_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.software.shell.fab.ActionButton
                android:id="@+id/fab_add_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/floating_action_button_negative_margin"
                android:layout_marginBottom="@dimen/floating_action_button_negative_margin"
                fab:button_color="@color/colorAccent"
                fab:image="@drawable/fab_plus_icon"
                fab:show_animation="@anim/fab_roll_from_down"
                fab:type="DEFAULT"/>

            <include
                layout="@layout/save_cancel_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

</RelativeLayout>
